{
    "version": 1,
    "name": "InputActions",
    "maps": [
        {
            "name": "Controls",
            "id": "c05d2f88-b239-4d37-8e38-4acdf1157b3d",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "465383a8-6dfd-4bbb-8e6b-fb85996e8cf0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "ebd2facd-9dc7-4b26-ba8f-2bc65aee51dc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePositionDelta",
                    "type": "Value",
                    "id": "c56feab6-8826-49b7-b5d6-2cc491512944",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "befdebbd-6b91-41ec-b412-a23f5a5e1885",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91db7bdc-a595-4448-b9aa-6ceecd36232d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e5a32f7-5207-4aea-baf0-3c95fea92f73",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePositionDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}